@@ -1,8 +1,11 @@
 package com.example.holing.bounded_context.mission.service;
 
+import com.example.holing.base.exception.GlobalException;
+import com.example.holing.bounded_context.mission.dto.MissionCountDto;
 import com.example.holing.bounded_context.mission.dto.MissionResultResponseDto;
 import com.example.holing.bounded_context.mission.entity.Mission;
 import com.example.holing.bounded_context.mission.entity.MissionResult;
+import com.example.holing.bounded_context.mission.exception.MissionExceptionCode;
 import com.example.holing.bounded_context.mission.repository.MissionRepository;
 import com.example.holing.bounded_context.mission.repository.MissionResultRepository;
 import com.example.holing.bounded_context.user.entity.User;
@@ -14,10 +17,9 @@ import org.springframework.transaction.annotation.Transactional;
 import java.time.LocalDate;
 import java.time.LocalDateTime;
 import java.time.LocalTime;
-import java.util.ArrayList;
-import java.util.List;
-import java.util.Random;
-import java.util.stream.Collectors;
+import java.util.*;
+
+import static java.util.stream.Collectors.toList;
 
 @Service
 @RequiredArgsConstructor
@@ -31,6 +33,10 @@ public class MissionResultService {
     @Transactional
     public List<MissionResultResponseDto> create(Long userId) {
         User user = userService.read(userId);
+
+        if (checkCreated(user)) {
+            throw new GlobalException(MissionExceptionCode.ALREADY_EXISTS);
+        }
 
         List<Mission> missions = missionService.getMissions(userId);
         List<MissionResult> todayMission = new ArrayList<>();
@@ -46,7 +52,7 @@ public class MissionResultService {
 
         return todayMission.stream()
                 .map(MissionResultResponseDto::fromEntity)
-                .collect(Collectors.toList());
+                .collect(toList());
     }
 
     @Transactional(readOnly = true)
@@ -57,26 +63,26 @@ public class MissionResultService {
         LocalDateTime endOfDay = LocalDate.now().atTime(LocalTime.MAX);
 
         List<MissionResult> todayMission = missionResultRepository.findAllByUserIdAndCreatedAtBetween(userId, startOfDay, endOfDay);
+//        List<MissionResult> todayMission = user.getMissionResults().stream()
+//                .filter(mr -> mr.getCreatedAt().toLocalDate().equals(LocalDateTime.now().toLocalDate()))
+//                .toList();
 
         return todayMission.stream()
                 .map(MissionResultResponseDto::fromEntity)
-                .collect(Collectors.toList());
+                .toList();
     }
 
     @Transactional
     public MissionResultResponseDto update(Long userId, Long missionResultId) {
         User user = userService.read(userId);
 
-        MissionResult missionResult = missionResultRepository.findById(missionResultId).get();
-
-        if (missionResult.getCreatedAt() != missionResult.getModifiedAt()) {
-            throw new IllegalArgumentException("이미 변경된 미션입니다");
+        if (checkUpdated(user)) {
+            throw new GlobalException(MissionExceptionCode.ALREADY_UPDATED);
         }
 
-        // 완료된 미션에 대해서는 새로운 미션 받을 수 없음
-        if (missionResult.isCompleted() == true) {
-            throw new IllegalArgumentException("이미 완료된 미션입니다.");
-        }
+//        MissionResult missionResult = missionResultRepository.findById(missionResultId).get();
+        MissionResult missionResult = user.getMissionResults().stream()
+                .filter(mr -> mr.getId().equals(missionResultId)).findFirst().get();
 
         // 동일한 태그(주요 증상)명의 미션 개수를 확인
         Mission prevMission = missionResult.getMission();
@@ -101,5 +107,77 @@ public class MissionResultService {
         return MissionResultResponseDto.fromEntity(missionResult);
     }
 
+    @Transactional
+    public MissionResultResponseDto complete(Long userId, Long missionResultId) {
+        User user = userService.read(userId);
+        MissionResult missionResult = missionResultRepository.findById(missionResultId).get();
+
+        if (missionResult.isCompleted() == true) {
+            throw new GlobalException(MissionExceptionCode.ALREADY_COMPLETED);
+        }
+
+        missionResult.updateState(true);
+
+        user.addPoint(missionResult.getMission().getReward());
+        return MissionResultResponseDto.fromEntity(missionResult);
+    }
+
+    @Transactional
+    public List<MissionCountDto> countCompletedMissions(Long userId, LocalDateTime startAt, LocalDateTime finishAt) {
+        List<MissionResult> monthTotal = missionResultRepository.findAllByUserIdAndCreatedAtBetween(userId, startAt, finishAt);
+
+        List<MissionResult> completedMission = monthTotal.stream()
+                .filter(MissionResult::isCompleted)
+                .toList();
+
+        Map<LocalDate, Integer> countByDate = new HashMap<>();
+        for (MissionResult cm : completedMission) {
+            LocalDate date = cm.getCreatedAt().toLocalDate();
+            countByDate.put(date, countByDate.getOrDefault(date, 0) + 1);
+        }
+
+        List<MissionCountDto> missionCountDtos = new ArrayList<>();
+        for (Map.Entry<LocalDate, Integer> entry : countByDate.entrySet()) {
+            missionCountDtos.add(new MissionCountDto(entry.getKey(), entry.getValue()));
+        }
+
+        missionCountDtos.sort(Comparator.comparing(MissionCountDto::date));
+        return missionCountDtos;
+    }
+
+    // 미션 생성 여부 확인 (생성되어 있으면 true, 안되어 있으면 false 반환)
+    public boolean checkCreated(User user) {
+        List<MissionResult> missionResults = user.getMissionResults();
+        missionResults.sort((mr1, mr2) -> mr2.getCreatedAt().compareTo(mr1.getCreatedAt()));
+
+        if (missionResults.isEmpty()) return false;
+        for (int i = 0; i < 3; i++) {
+            if (missionResults.get(i).getCreatedAt().getDayOfMonth() == LocalDateTime.now().getDayOfMonth()) {
+                return true;
+            }
+        }
+
+        return false;
+    }
+
+    // 미션 교체 여부 확인 (미션 교체 되었다면 true, 교체된적 없다면 false)
+    public boolean checkUpdated(User user) {
+        List<MissionResult> missionResults = user.getMissionResults();
+        missionResults.sort((mr1, mr2) -> mr2.getCreatedAt().compareTo(mr1.getCreatedAt()));
+
+        if (!checkCreated(user)) {
+            throw new GlobalException(MissionExceptionCode.UPDATED_DENIED);
+        }
+
+        for (int i = 0; i < 3; i++) {
+            MissionResult checkMissionResult = missionResults.get(i);
+            // 생성 시간과 수정 시간이 다르다면 -> 미션 교체한 것
+            if (!checkMissionResult.getCreatedAt().isEqual(checkMissionResult.getModifiedAt())) {
+                return true;
+            }
+        }
+
+        return false;
+    }
 
 }
